Added parameter for embedding dimension.

--- a/lectures/makemore/makemore_part2_mlp.ipynb
+++ b/lectures/makemore/makemore_part2_mlp.ipynb
@@ -30,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(Xtr, Ytr) -> tuple:\n",
+    "def train(Xtr, Ytr, dim_embed, n_epochs=200000) -> tuple:\n",
     "  g = torch.Generator().manual_seed(2147483647) # for reproducibility\n",
-    "  C = torch.randn((27, 10), generator=g)\n",
-    "  W1 = torch.randn((30, 200), generator=g)\n",
+    "  C = torch.randn((27, dim_embed), generator=g)\n",
+    "  W1 = torch.randn((3 * dim_embed, 200), generator=g)\n",
     "  b1 = torch.randn(200, generator=g)\n",
     "  W2 = torch.randn((200, 27), generator=g)\n",
     "  b2 = torch.randn(27, generator=g)\n",
@@ -45,14 +45,14 @@
     "  for p in parameters:\n",
     "    p.requires_grad = True\n",
     "\n",
-    "  for i in tqdm(range(200000)):\n",
+    "  for i in tqdm(range(n_epochs)):\n",
     "    \n",
     "    # minibatch construct\n",
     "    ix = torch.randint(0, Xtr.shape[0], (32,))\n",
     "    \n",
     "    # forward pass\n",
     "    emb = C[Xtr[ix]] # (32, 3, 10)\n",
-    "    h = torch.tanh(emb.view(-1, 30) @ W1 + b1) # (32, 200)\n",
+    "    h = torch.tanh(emb.view(-1, math.prod(emb.shape[1:])) @ W1 + b1) # (32, 200)\n",
     "    logits = h @ W2 + b2 # (32, 27)\n",
     "    loss = F.cross_entropy(logits, Ytr[ix])\n",
     "    # tqdm.write(f\"{loss=:.4f}\")\n",
@@ -550,51 +550,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "C, W1, b1, W2, b2 = train(Xtr, Ytr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2.131497383117676"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "eval_loss(Xtr, Ytr, C, W1, b1, W2, b2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:00<00:00, 60.19it/s]\n"
+     ]
+    },
     {
-     "data": {
-      "text/plain": [
-       "2.172429084777832"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18.887073516845703\n",
+      "loss_train=18.0709, loss_val=18.0671\n"
+     ]
     }
    ],
    "source": [
-    "eval_loss(Xdev, Ydev, C, W1, b1, W2, b2)"
+    "C, W1, b1, W2, b2 = train(Xtr, Ytr, 10, n_epochs=10)\n",
+    "loss_train = eval_loss(Xtr, Ytr, C, W1, b1, W2, b2)\n",
+    "loss_val = eval_loss(Xdev, Ydev, C, W1, b1, W2, b2)\n",
+    "print(f'{loss_train=:.4f}, {loss_val=:.4f}')"
    ]
   },
   {
