Ready for optimizing hyperparameters.

--- a/lectures/makemore/makemore_part2_mlp.ipynb
+++ b/lectures/makemore/makemore_part2_mlp.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,7 @@
     "import matplotlib.pyplot as plt # for making figures\n",
     "from tqdm import tqdm\n",
     "import math\n",
+    "import random\n",
     "%matplotlib inline"
    ]
   },
@@ -30,16 +31,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(Xtr, Ytr, dim_embed, n_epochs=200000) -> tuple:\n",
+    "def build_dataset(words, block_size, stoi):  \n",
+    "  X, Y = [], []\n",
+    "  for w in words:\n",
+    "\n",
+    "    #print(w)\n",
+    "    context = [0] * block_size\n",
+    "    for ch in w + '.':\n",
+    "      ix = stoi[ch]\n",
+    "      X.append(context)\n",
+    "      Y.append(ix)\n",
+    "      #print(''.join(itos[i] for i in context), '--->', itos[ix])\n",
+    "      context = context[1:] + [ix] # crop and append\n",
+    "\n",
+    "  X = torch.tensor(X)\n",
+    "  Y = torch.tensor(Y)\n",
+    "  print(X.shape, Y.shape)\n",
+    "  return X, Y\n",
+    "\n",
+    "def train(Xtr, Ytr, dim_embed, dim_w1, n_epochs=200000) -> tuple:\n",
     "  g = torch.Generator().manual_seed(2147483647) # for reproducibility\n",
     "  C = torch.randn((27, dim_embed), generator=g)\n",
-    "  W1 = torch.randn((3 * dim_embed, 200), generator=g)\n",
-    "  b1 = torch.randn(200, generator=g)\n",
-    "  W2 = torch.randn((200, 27), generator=g)\n",
+    "  W1 = torch.randn((3 * dim_embed, dim_w1), generator=g)\n",
+    "  b1 = torch.randn(dim_w1, generator=g)\n",
+    "  W2 = torch.randn((dim_w1, 27), generator=g)\n",
     "  b2 = torch.randn(27, generator=g)\n",
     "  parameters = [C, W1, b1, W2, b2]\n",
     "  for p in parameters:\n",
@@ -93,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +121,7 @@
        "['emma', 'olivia', 'ava', 'isabella', 'sophia', 'charlotte', 'mia', 'amelia']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +143,7 @@
        "32033"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -157,32 +176,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# build the dataset\n",
     "\n",
-    "block_size = 3 # context length: how many characters do we take to predict the next one?\n",
-    "X, Y = [], []\n",
-    "for w in words:\n",
+    "# block_size = 3 # context length: how many characters do we take to predict the next one?\n",
+    "# X, Y = [], []\n",
+    "# for w in words:\n",
     "  \n",
-    "  #print(w)\n",
-    "  context = [0] * block_size\n",
-    "  for ch in w + '.':\n",
-    "    ix = stoi[ch]\n",
-    "    X.append(context)\n",
-    "    Y.append(ix)\n",
-    "    #print(''.join(itos[i] for i in context), '--->', itos[ix])\n",
-    "    context = context[1:] + [ix] # crop and append\n",
+    "#   #print(w)\n",
+    "#   context = [0] * block_size\n",
+    "#   for ch in w + '.':\n",
+    "#     ix = stoi[ch]\n",
+    "#     X.append(context)\n",
+    "#     Y.append(ix)\n",
+    "#     #print(''.join(itos[i] for i in context), '--->', itos[ix])\n",
+    "#     context = context[1:] + [ix] # crop and append\n",
     "  \n",
-    "X = torch.tensor(X)\n",
-    "Y = torch.tensor(Y)"
+    "# X = torch.tensor(X)\n",
+    "# Y = torch.tensor(Y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -197,12 +216,12 @@
     }
    ],
    "source": [
-    "X.shape, X.dtype, Y.shape, Y.dtype"
+    "# X.shape, X.dtype, Y.shape, Y.dtype"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -219,33 +238,14 @@
     "# build the dataset\n",
     "block_size = 3 # context length: how many characters do we take to predict the next one?\n",
     "\n",
-    "def build_dataset(words):  \n",
-    "  X, Y = [], []\n",
-    "  for w in words:\n",
-    "\n",
-    "    #print(w)\n",
-    "    context = [0] * block_size\n",
-    "    for ch in w + '.':\n",
-    "      ix = stoi[ch]\n",
-    "      X.append(context)\n",
-    "      Y.append(ix)\n",
-    "      #print(''.join(itos[i] for i in context), '--->', itos[ix])\n",
-    "      context = context[1:] + [ix] # crop and append\n",
-    "\n",
-    "  X = torch.tensor(X)\n",
-    "  Y = torch.tensor(Y)\n",
-    "  print(X.shape, Y.shape)\n",
-    "  return X, Y\n",
-    "\n",
-    "import random\n",
     "random.seed(42)\n",
     "random.shuffle(words)\n",
     "n1 = int(0.8*len(words))\n",
     "n2 = int(0.9*len(words))\n",
     "\n",
-    "Xtr, Ytr = build_dataset(words[:n1])\n",
-    "Xdev, Ydev = build_dataset(words[n1:n2])\n",
-    "Xte, Yte = build_dataset(words[n2:])"
+    "Xtr, Ytr = build_dataset(words[:n1], block_size, stoi)\n",
+    "Xdev, Ydev = build_dataset(words[n1:n2], block_size, stoi)\n",
+    "Xte, Yte = build_dataset(words[n2:], block_size, stoi)"
    ]
   },
   {
@@ -550,30 +550,523 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:00<00:00, 60.19it/s]\n"
+      "100%|██████████| 100/100 [00:00<00:00, 632.01it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18.887073516845703\n",
-      "loss_train=18.0709, loss_val=18.0671\n"
+      "3.6608083248138428\n",
+      "dim_embed=2, dim_w1=10\n",
+      "loss_train=3.5947, loss_val=3.5657\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 1041.06it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.229454755783081\n",
+      "dim_embed=2, dim_w1=50\n",
+      "loss_train=3.6000, loss_val=3.5687\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 1248.03it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.569679260253906\n",
+      "dim_embed=2, dim_w1=100\n",
+      "loss_train=3.7676, loss_val=3.7641\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 1258.65it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.969285011291504\n",
+      "dim_embed=2, dim_w1=200\n",
+      "loss_train=4.0179, loss_val=3.9797\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 1231.58it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.797901630401611\n",
+      "dim_embed=2, dim_w1=500\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss_train=7.3195, loss_val=7.3250\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 495.42it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16.151596069335938\n",
+      "dim_embed=2, dim_w1=1000\n",
+      "loss_train=12.3520, loss_val=12.3693\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 1080.91it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.685776710510254\n",
+      "dim_embed=4, dim_w1=10\n",
+      "loss_train=3.6339, loss_val=3.6355\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 1154.73it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.438336133956909\n",
+      "dim_embed=4, dim_w1=50\n",
+      "loss_train=4.2020, loss_val=4.1834\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 820.38it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.22357177734375\n",
+      "dim_embed=4, dim_w1=100\n",
+      "loss_train=5.4004, loss_val=5.3798\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 1506.41it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.69529390335083\n",
+      "dim_embed=4, dim_w1=200\n",
+      "loss_train=5.7445, loss_val=5.7721\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 1376.27it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.16430950164795\n",
+      "dim_embed=4, dim_w1=500\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss_train=9.9837, loss_val=10.0003\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 810.28it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14.72845458984375\n",
+      "dim_embed=4, dim_w1=1000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss_train=17.1714, loss_val=17.1185\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 1445.33it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.190647125244141\n",
+      "dim_embed=8, dim_w1=10\n",
+      "loss_train=4.0389, loss_val=4.0286\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 1564.34it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.716643810272217\n",
+      "dim_embed=8, dim_w1=50\n",
+      "loss_train=5.8373, loss_val=5.7776\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 1377.06it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.943288326263428\n",
+      "dim_embed=8, dim_w1=100\n",
+      "loss_train=7.0350, loss_val=7.0153\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 1174.57it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.176989555358887\n",
+      "dim_embed=8, dim_w1=200\n",
+      "loss_train=8.7851, loss_val=8.7684\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 787.10it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.914349555969238\n",
+      "dim_embed=8, dim_w1=500\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss_train=12.1104, loss_val=12.1082\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 804.20it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24.924196243286133\n",
+      "dim_embed=8, dim_w1=1000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss_train=21.1135, loss_val=21.0353\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 487.16it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.183684825897217\n",
+      "dim_embed=10, dim_w1=10\n",
+      "loss_train=3.8186, loss_val=3.8255\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 1188.28it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.293417453765869\n",
+      "dim_embed=10, dim_w1=50\n",
+      "loss_train=6.0533, loss_val=6.0519\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 1012.33it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.578305721282959\n",
+      "dim_embed=10, dim_w1=100\n",
+      "loss_train=6.9073, loss_val=6.8768\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 1129.46it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.780987739562988\n",
+      "dim_embed=10, dim_w1=200\n",
+      "loss_train=8.7438, loss_val=8.7675\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 1056.28it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.965228080749512\n",
+      "dim_embed=10, dim_w1=500\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss_train=13.7047, loss_val=13.6322\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 524.27it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22.116458892822266\n",
+      "dim_embed=10, dim_w1=1000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss_train=19.3161, loss_val=19.4186\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "C, W1, b1, W2, b2 = train(Xtr, Ytr, 10, n_epochs=10)\n",
-    "loss_train = eval_loss(Xtr, Ytr, C, W1, b1, W2, b2)\n",
-    "loss_val = eval_loss(Xdev, Ydev, C, W1, b1, W2, b2)\n",
-    "print(f'{loss_train=:.4f}, {loss_val=:.4f}')"
+    "losses = {}\n",
+    "n_epochs = 200000\n",
+    "for dim_embed in [2, 4, 8, 10]:\n",
+    "    losses[dim_embed] = {}\n",
+    "    for dim_w1 in [10, 50, 100, 200, 500, 1000]:\n",
+    "        losses[dim_embed][dim_w1] = {}\n",
+    "        C, W1, b1, W2, b2 = train(Xtr, Ytr, dim_embed, dim_w1, n_epochs=n_epochs)\n",
+    "        print(f'{dim_embed=}, {dim_w1=}')\n",
+    "        loss_train = eval_loss(Xtr, Ytr, C, W1, b1, W2, b2)\n",
+    "        loss_val = eval_loss(Xdev, Ydev, C, W1, b1, W2, b2)\n",
+    "        losses[dim_embed][dim_w1]['train'] = loss_train\n",
+    "        losses[dim_embed][dim_w1]['val'] = loss_val\n",
+    "        print(f'{loss_train=:.4f}, {loss_val=:.4f}\\n')"
    ]
   },
   {
