Printing current best validation loss.

--- a/lectures/makemore/makemore_part2_mlp.ipynb
+++ b/lectures/makemore/makemore_part2_mlp.ipynb
@@ -557,16 +557,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 632.01it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 330.22it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.6608083248138428\n",
+      "5.229640960693359\n",
       "dim_embed=2, dim_w1=10\n",
-      "loss_train=3.5947, loss_val=3.5657\n",
+      "loss_train=5.1220, loss_val=5.0733, loss_val_min=5.0733\n",
       "\n"
      ]
     },
@@ -574,16 +574,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 1041.06it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 868.48it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.229454755783081\n",
+      "6.604589462280273\n",
       "dim_embed=2, dim_w1=50\n",
-      "loss_train=3.6000, loss_val=3.5687\n",
+      "loss_train=8.5375, loss_val=8.4910, loss_val_min=5.0733\n",
       "\n"
      ]
     },
@@ -591,16 +591,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 1248.03it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 671.30it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.569679260253906\n",
+      "10.155325889587402\n",
       "dim_embed=2, dim_w1=100\n",
-      "loss_train=3.7676, loss_val=3.7641\n",
+      "loss_train=10.9793, loss_val=10.9413, loss_val_min=5.0733\n",
       "\n"
      ]
     },
@@ -608,16 +608,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 1258.65it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 169.35it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.969285011291504\n",
-      "dim_embed=2, dim_w1=200\n",
-      "loss_train=4.0179, loss_val=3.9797\n",
+      "10.954139709472656\n",
+      "dim_embed=2, dim_w1=200\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss_train=12.6182, loss_val=12.5605, loss_val_min=5.0733\n",
       "\n"
      ]
     },
@@ -625,14 +638,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 1231.58it/s]"
+      "100%|██████████| 10/10 [00:00<00:00, 158.25it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.797901630401611\n",
+      "17.674854278564453\n",
       "dim_embed=2, dim_w1=500\n"
      ]
     },
@@ -647,7 +660,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss_train=7.3195, loss_val=7.3250\n",
+      "loss_train=15.3051, loss_val=15.1123, loss_val_min=5.0733\n",
       "\n"
      ]
     },
@@ -655,16 +668,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 495.42it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 959.71it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16.151596069335938\n",
-      "dim_embed=2, dim_w1=1000\n",
-      "loss_train=12.3520, loss_val=12.3693\n",
+      "25.609342575073242\n",
+      "dim_embed=2, dim_w1=1000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss_train=22.2636, loss_val=22.1409, loss_val_min=5.0733\n",
       "\n"
      ]
     },
@@ -672,16 +698,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 1080.91it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 1342.99it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.685776710510254\n",
+      "5.259800910949707\n",
       "dim_embed=4, dim_w1=10\n",
-      "loss_train=3.6339, loss_val=3.6355\n",
+      "loss_train=5.2711, loss_val=5.2765, loss_val_min=5.0733\n",
       "\n"
      ]
     },
@@ -689,16 +715,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 1154.73it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 1425.13it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.438336133956909\n",
+      "10.614176750183105\n",
       "dim_embed=4, dim_w1=50\n",
-      "loss_train=4.2020, loss_val=4.1834\n",
+      "loss_train=9.9267, loss_val=9.8888, loss_val_min=5.0733\n",
       "\n"
      ]
     },
@@ -706,16 +732,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 820.38it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 221.57it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.22357177734375\n",
-      "dim_embed=4, dim_w1=100\n",
-      "loss_train=5.4004, loss_val=5.3798\n",
+      "12.176053047180176\n",
+      "dim_embed=4, dim_w1=100\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss_train=12.6314, loss_val=12.5808, loss_val_min=5.0733\n",
       "\n"
      ]
     },
@@ -723,16 +762,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 1506.41it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 500.44it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.69529390335083\n",
+      "14.749957084655762\n",
       "dim_embed=4, dim_w1=200\n",
-      "loss_train=5.7445, loss_val=5.7721\n",
+      "loss_train=14.6488, loss_val=14.6792, loss_val_min=5.0733\n",
       "\n"
      ]
     },
@@ -740,14 +779,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 1376.27it/s]"
+      "100%|██████████| 10/10 [00:00<00:00, 1466.49it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9.16430950164795\n",
+      "24.857032775878906\n",
       "dim_embed=4, dim_w1=500\n"
      ]
     },
@@ -762,7 +801,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss_train=9.9837, loss_val=10.0003\n",
+      "loss_train=23.8220, loss_val=23.8476, loss_val_min=5.0733\n",
       "\n"
      ]
     },
@@ -770,14 +809,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 810.28it/s]"
+      "100%|██████████| 10/10 [00:00<00:00, 790.22it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14.72845458984375\n",
+      "31.691755294799805\n",
       "dim_embed=4, dim_w1=1000\n"
      ]
     },
@@ -792,7 +831,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss_train=17.1714, loss_val=17.1185\n",
+      "loss_train=31.0346, loss_val=30.9795, loss_val_min=5.0733\n",
       "\n"
      ]
     },
@@ -800,16 +839,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 1445.33it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 1489.30it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.190647125244141\n",
+      "6.288814544677734\n",
       "dim_embed=8, dim_w1=10\n",
-      "loss_train=4.0389, loss_val=4.0286\n",
+      "loss_train=6.3995, loss_val=6.3933, loss_val_min=5.0733\n",
       "\n"
      ]
     },
@@ -817,16 +856,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 1564.34it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 738.77it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.716643810272217\n",
+      "12.754864692687988\n",
       "dim_embed=8, dim_w1=50\n",
-      "loss_train=5.8373, loss_val=5.7776\n",
+      "loss_train=10.8344, loss_val=10.7912, loss_val_min=5.0733\n",
       "\n"
      ]
     },
@@ -834,16 +873,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 1377.06it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 1746.90it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.943288326263428\n",
-      "dim_embed=8, dim_w1=100\n",
-      "loss_train=7.0350, loss_val=7.0153\n",
+      "13.458491325378418\n",
+      "dim_embed=8, dim_w1=100\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss_train=13.4945, loss_val=13.3397, loss_val_min=5.0733\n",
       "\n"
      ]
     },
@@ -851,16 +903,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 1174.57it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 456.64it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.176989555358887\n",
+      "21.835134506225586\n",
       "dim_embed=8, dim_w1=200\n",
-      "loss_train=8.7851, loss_val=8.7684\n",
+      "loss_train=17.4086, loss_val=17.3014, loss_val_min=5.0733\n",
       "\n"
      ]
     },
@@ -868,14 +920,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 787.10it/s]"
+      "100%|██████████| 10/10 [00:00<00:00, 1044.42it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13.914349555969238\n",
+      "27.60905647277832\n",
       "dim_embed=8, dim_w1=500\n"
      ]
     },
@@ -890,7 +942,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss_train=12.1104, loss_val=12.1082\n",
+      "loss_train=27.6791, loss_val=27.7264, loss_val_min=5.0733\n",
       "\n"
      ]
     },
@@ -898,14 +950,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 804.20it/s]"
+      "100%|██████████| 10/10 [00:00<00:00, 306.09it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24.924196243286133\n",
+      "40.541500091552734\n",
       "dim_embed=8, dim_w1=1000\n"
      ]
     },
@@ -920,7 +972,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss_train=21.1135, loss_val=21.0353\n",
+      "loss_train=35.5009, loss_val=35.3642, loss_val_min=5.0733\n",
       "\n"
      ]
     },
@@ -928,16 +980,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 487.16it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 304.80it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.183684825897217\n",
+      "6.420495510101318\n",
       "dim_embed=10, dim_w1=10\n",
-      "loss_train=3.8186, loss_val=3.8255\n",
+      "loss_train=5.5848, loss_val=5.5878, loss_val_min=5.0733\n",
       "\n"
      ]
     },
@@ -945,16 +997,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 1188.28it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 746.88it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.293417453765869\n",
-      "dim_embed=10, dim_w1=50\n",
-      "loss_train=6.0533, loss_val=6.0519\n",
+      "11.566657066345215\n",
+      "dim_embed=10, dim_w1=50\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss_train=11.6598, loss_val=11.7038, loss_val_min=5.0733\n",
       "\n"
      ]
     },
@@ -962,16 +1027,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 1012.33it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 191.80it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.578305721282959\n",
+      "14.340258598327637\n",
       "dim_embed=10, dim_w1=100\n",
-      "loss_train=6.9073, loss_val=6.8768\n",
+      "loss_train=14.0687, loss_val=14.0810, loss_val_min=5.0733\n",
       "\n"
      ]
     },
@@ -979,16 +1044,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 1129.46it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 387.31it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11.780987739562988\n",
+      "20.932783126831055\n",
       "dim_embed=10, dim_w1=200\n",
-      "loss_train=8.7438, loss_val=8.7675\n",
+      "loss_train=18.0007, loss_val=18.0280, loss_val_min=5.0733\n",
       "\n"
      ]
     },
@@ -996,29 +1061,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 1056.28it/s]"
+      "100%|██████████| 10/10 [00:00<00:00, 907.82it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12.965228080749512\n",
-      "dim_embed=10, dim_w1=500\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loss_train=13.7047, loss_val=13.6322\n",
+      "25.555652618408203\n",
+      "dim_embed=10, dim_w1=500\n",
+      "loss_train=30.2661, loss_val=30.1582, loss_val_min=5.0733\n",
       "\n"
      ]
     },
@@ -1026,14 +1078,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 524.27it/s]"
+      "100%|██████████| 10/10 [00:00<00:00, 446.76it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22.116458892822266\n",
+      "39.46242141723633\n",
       "dim_embed=10, dim_w1=1000\n"
      ]
     },
@@ -1048,13 +1100,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss_train=19.3161, loss_val=19.4186\n",
+      "loss_train=38.8504, loss_val=38.6529, loss_val_min=5.0733\n",
       "\n"
      ]
     }
    ],
    "source": [
     "losses = {}\n",
+    "loss_val_min = float('inf')\n",
     "n_epochs = 200000\n",
     "for dim_embed in [2, 4, 8, 10]:\n",
     "    losses[dim_embed] = {}\n",
@@ -1066,7 +1119,8 @@
     "        loss_val = eval_loss(Xdev, Ydev, C, W1, b1, W2, b2)\n",
     "        losses[dim_embed][dim_w1]['train'] = loss_train\n",
     "        losses[dim_embed][dim_w1]['val'] = loss_val\n",
-    "        print(f'{loss_train=:.4f}, {loss_val=:.4f}\\n')"
+    "        loss_val_min = min(loss_val_min, loss_val)\n",
+    "        print(f'{loss_train=:.4f}, {loss_val=:.4f}, {loss_val_min=:.4f}\\n')"
    ]
   },
   {
